Fixed bug #31515 (Improve performance of scandir() by factor of 10 or so).